--- a/Inicio/CapaDatos/CapaDatos.csproj
+++ b/Inicio/CapaDatos/CapaDatos.csproj
@@ -48,6 +48,7 @@
     <Compile Include="CDConexion.cs" />
     <Compile Include="CDEdificio.cs" />
     <Compile Include="CDEmpleado.cs" />
+    <Compile Include="CDInmueble.cs" />
     <Compile Include="CDUsuario.cs" />
     <Compile Include="CNEmpleado.cs" />
     <Compile Include="CNUsuario.cs" />
