--- a/Inicio/Inicio/Inicio.csproj
+++ b/Inicio/Inicio/Inicio.csproj
@@ -174,6 +174,18 @@
     <Compile Include="Edificio.Designer.cs">
       <DependentUpon>Edificio.cs</DependentUpon>
     </Compile>
+    <Compile Include="EditarCargo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditarCargo.Designer.cs">
+      <DependentUpon>EditarCargo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditarEmpleado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditarEmpleado.Designer.cs">
+      <DependentUpon>EditarEmpleado.cs</DependentUpon>
+    </Compile>
     <Compile Include="Empleado.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -329,6 +341,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Edificio.resx">
       <DependentUpon>Edificio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditarCargo.resx">
+      <DependentUpon>EditarCargo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditarEmpleado.resx">
+      <DependentUpon>EditarEmpleado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Empleado.resx">
       <DependentUpon>Empleado.cs</DependentUpon>
