--- a/Inicio/CapaDatos/CapaDatos.csproj
+++ b/Inicio/CapaDatos/CapaDatos.csproj
@@ -35,6 +35,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +47,7 @@
     <Compile Include="CDAlumno.cs" />
     <Compile Include="CDAsignatura.cs" />
     <Compile Include="CDAula.cs" />
+    <Compile Include="CDBitacora.cs" />
     <Compile Include="CDCargo.cs" />
     <Compile Include="CDCarrera.cs" />
     <Compile Include="CDConexion.cs" />
