--- a/Inicio/Inicio/Inicio.csproj
+++ b/Inicio/Inicio/Inicio.csproj
@@ -214,6 +214,12 @@
     <Compile Include="Inmueble.Designer.cs">
       <DependentUpon>Inmueble.cs</DependentUpon>
     </Compile>
+    <Compile Include="InmueblePrestado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InmueblePrestado.Designer.cs">
+      <DependentUpon>InmueblePrestado.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -363,6 +369,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Inmueble.resx">
       <DependentUpon>Inmueble.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InmueblePrestado.resx">
+      <DependentUpon>InmueblePrestado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
