--- a/Inicio/Inicio/Inicio.csproj
+++ b/Inicio/Inicio/Inicio.csproj
@@ -76,6 +76,12 @@
     <Compile Include="Aula.Designer.cs">
       <DependentUpon>Aula.cs</DependentUpon>
     </Compile>
+    <Compile Include="Aula1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Aula1.Designer.cs">
+      <DependentUpon>Aula1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Bitacora.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -301,6 +307,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Aula.resx">
       <DependentUpon>Aula.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Aula1.resx">
+      <DependentUpon>Aula1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Bitacora.resx">
       <DependentUpon>Bitacora.cs</DependentUpon>
