--- a/Inicio/Inicio/App.config
+++ b/Inicio/Inicio/App.config
@@ -4,10 +4,10 @@
     </configSections>
     <connectionStrings>
         <add name="Inicio.Properties.Settings.SiceeConnectionString"
-            connectionString="Data Source=desktop-kvehec8;Initial Catalog=Sicee;Integrated Security=True"
+            connectionString="Data Source=localhost;Initial Catalog=Sicee;Integrated Security=True"
             providerName="System.Data.SqlClient" />
         <add name="Inicio.Properties.Settings.SiceeConnectionString1"
-            connectionString="Data Source=DESKTOP-4T0KVJE;Initial Catalog=Sicee;Integrated Security=True"
+            connectionString="Data Source=localhost;Initial Catalog=Sicee;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
