--- a/Inicio/Inicio/Inicio.csproj
+++ b/Inicio/Inicio/Inicio.csproj
@@ -148,6 +148,12 @@
     <Compile Include="Carrera.Designer.cs">
       <DependentUpon>Carrera.cs</DependentUpon>
     </Compile>
+    <Compile Include="CE.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CE.Designer.cs">
+      <DependentUpon>CE.cs</DependentUpon>
+    </Compile>
     <Compile Include="ConsultaAlumno.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -244,6 +250,12 @@
     </Compile>
     <Compile Include="EditarEmpleado.Designer.cs">
       <DependentUpon>EditarEmpleado.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditarUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditarUsuario.Designer.cs">
+      <DependentUpon>EditarUsuario.cs</DependentUpon>
     </Compile>
     <Compile Include="Empleado.cs">
       <SubType>Form</SubType>
@@ -391,6 +403,9 @@
     <EmbeddedResource Include="Carrera.resx">
       <DependentUpon>Carrera.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CE.resx">
+      <DependentUpon>CE.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ConsultaAlumno.resx">
       <DependentUpon>ConsultaAlumno.cs</DependentUpon>
     </EmbeddedResource>
@@ -438,6 +453,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EditarEmpleado.resx">
       <DependentUpon>EditarEmpleado.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditarUsuario.resx">
+      <DependentUpon>EditarUsuario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Empleado.resx">
       <DependentUpon>Empleado.cs</DependentUpon>
